[package]
name                    = "grammar-grammar"
description             = "A grammar specification language."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "LGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/grammar-grammar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc              = { git = "https://github.com/yaahc/displaydoc", rev = "7159bb5c9d41ca3c7ccf04ae86ae3acb0ea12a27" }
grammar-executor        = { path = "executor" }
grammar-type-info       = { path = "type-info" }

[workspace]
resolver                = "2"
members                 = [
  ".",
  "executor",
  "model",
  "parse-layering",
  "text",
  "type-info",
  "type-info/derive",
]
default-members         = [
  ".",
  "executor",
  "model",
  "parse-layering",
  "text",
  "type-info",
  "type-info/derive",
]
