[package]
name                    = "grammar-executor"
description             = "An execution framework for parser generators."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "LGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/grammar-grammar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
async-mutex = "1.4.0"
async-trait = "0.1.56"
crossbeam = "0.8.1"
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7159bb5c9d41ca3c7ccf04ae86ae3acb0ea12a27" }
grammar-grammar = { path = ".." }
# parking_lot = "0.12.1"
thiserror = "1.0.30"

[dev-dependencies]
futures = "0.3.7"
