[package]
name                    = "grammar-type-info"
description             = "Type information for grammars."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "LGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/grammar-grammar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid                    = "0.8"

[dev-dependencies]
grammar-type-info-derive = { path = "derive" }
