[package]
name                    = "grammar-type-info-derive"
description             = "A derive macro for runtime type information."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "LGPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/grammar-grammar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro              = true

[dependencies]
proc-macro2             = "1"
quote                   = "1"
syn                     = "1"
uuid                    = { version = "0.8", features = ["v4"] }
